<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.artillexstudios</groupId>
    <artifactId>AxTrade</artifactId>
    <version>1.26.1</version>
    <packaging>jar</packaging>

    <name>AxTrade</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <relocations>
                                <relocation>
                                    <pattern>com.artillexstudios.axapi</pattern>
                                    <shadedPattern>com.artillexstudios.axtrade.libs.axapi</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>com.artillexstudios.axtrade.libs.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>dev.triumphteam.gui</pattern>
                                    <shadedPattern>com.artillexstudios.axtrade.libs.gui</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>revxrsal.commands</pattern>
                                    <shadedPattern>com.artillexstudios.axtrade.libs.lamp</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>Artillex-Studios</id>
            <url>https://repo.artillex-studios.com/releases/</url>
        </repository>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>techscode</id>
            <url>https://repo.techscode.com/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>rosewood-repo</id>
            <url>https://repo.rosewooddev.io/repository/public/</url>
        </repository>
        <repository>
            <id>alessiodp</id>
            <url>https://repo.alessiodp.com/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.2-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios.axapi</groupId>
            <artifactId>axapi</artifactId>
            <version>2.1.7</version>
            <scope>compile</scope>
            <classifier>all</classifier>
        </dependency>
        <dependency>
            <groupId>dev.triumphteam</groupId>
            <artifactId>triumph-gui</artifactId>
            <version>3.1.13</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.12.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.2.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>me.aglerr.mobcoins</groupId>
            <artifactId>MobCoins</artifactId>
            <version>1.1.3</version>
            <systemPath>${project.basedir}/libs/TheOnly-MobCoins-1.1.3.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios</groupId>
            <artifactId>AxQuestBoardAPI</artifactId>
            <version>3</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.Realizedd</groupId>
            <artifactId>TokenManager</artifactId>
            <version>3.2.4</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>me.swanis.mobcoins</groupId>
            <artifactId>MobCoins</artifactId>
            <version>1.1.2</version>
            <systemPath>${project.basedir}/libs/mobcoins-api-1.1.2-SNAPSHOT.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>me.rivaldev.harvesterhoes</groupId>
            <artifactId>Main</artifactId>
            <version>LATEST</version>
            <systemPath>${project.basedir}/libs/RivalHarvesterHoesAPI.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>kingdoms</artifactId>
            <version>LATEST</version>
            <systemPath>${project.basedir}/libs/KingdomsX-1.16.14.1.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.coinsengine</groupId>
            <artifactId>CoinsEngine</artifactId>
            <version>2.1.1</version>
            <systemPath>${project.basedir}/libs/CoinsEngine-2.1.1.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>su.nightexpress.excellenteconomy</groupId>
            <artifactId>ExcellentEconomy</artifactId>
            <version>2.7.0</version>
            <systemPath>${project.basedir}/libs/ExcellentEconomy-2.7.0.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>me.qKing12.RoyaleEconomy</groupId>
            <artifactId>RoyaleEconomy</artifactId>
            <version>1.4.4</version>
            <systemPath>${project.basedir}/libs/RoyaleEconomyAPI.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.black_ixx</groupId>
            <artifactId>playerpoints</artifactId>
            <version>3.2.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.TechsCode</groupId>
            <artifactId>UltraEconomyAPI</artifactId>
            <version>2.6.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios</groupId>
            <artifactId>AxShulkers</artifactId>
            <version>1.20.0</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.Emibergo02</groupId>
            <artifactId>RedisEconomy</artifactId>
            <version>4.3.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.mraxetv.beasttokens.api</groupId>
            <artifactId>BeastTokens</artifactId>
            <version>3.13.3</version>
            <systemPath>${project.basedir}/libs/bt-api-3.13.3.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.willfp.ecobits</groupId>
            <artifactId>EcoBits</artifactId>
            <version>1.8.4</version>
            <systemPath>${project.basedir}/libs/EcoBits-v1.8.4.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>me.rivaldev.credits</groupId>
            <artifactId>RivalCredits</artifactId>
            <version>API</version>
            <systemPath>${project.basedir}/libs/RivalCreditsAPI.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.artillexstudios</groupId>
            <artifactId>AxHoesAPI</artifactId>
            <version>1</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>Artillex-Studios</id>
            <url>https://repo.artillex-studios.com/releases/</url>
        </repository>
    </distributionManagement>
</project>